--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
-  - init: curl -L https://foundry.paradigm.xyz | bash
+  - command: curl -L https://foundry.paradigm.xyz | bash
   - command: foundryup
