--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
 tasks:
-  - init: curl -L https://foundry.paradigm.xyz | bash
+  - before: curl -L https://foundry.paradigm.xyz | bash
   - name: Foundry
-    command: source /home/gitpod/.bashrc && foundry
+    init: source /home/gitpod/.bashrc && foundry
