--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,6 @@
 tasks:
   - name: Foundry
-    before: curl -L https://foundry.paradigm.xyz | bash && source /home/gitpod/.bashrc
-    init: foundryup
+    init: curl -L https://foundry.paradigm.xyz | bash  source /home/gitpod/.bashrc
+    command: foundryup
+  - name: Test
+    command: forge test
