--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,6 @@
 tasks:
   - name: Foundry
-    init: curl -L https://foundry.paradigm.xyz | bash  source /home/gitpod/.bashrc
+    init: curl -L https://foundry.paradigm.xyz | bash && source /home/gitpod/.bashrc
     command: foundryup
   - name: Test
     command: forge test
